--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,13 +10,24 @@ on:
       ref:
         description: 'ref'
         required: true
-        
-jobs:
 
+env:
+  AWS_REGION: us-east-1 
+  ECR_REPOSITORY: testrepo 
+  CONTAINER_NAME: testgo 
+
+jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
 
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
