--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -33,6 +33,9 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
+    - name: refo
+      run: echo ${{ github.ref }}
+
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       env:
