--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -23,9 +23,11 @@ jobs:
         run: |
           i_s=${{ github.event.inputs.commit_sha }}
           sha=${{ github.sha }}
+          one_liner=i_s || sha
           echo "::set-ouput name=workflow_sha::$sha" 
           echo $i_s
           echo $sha
+          echo $one_liner
 
   build:
     needs: [prepare]
