--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -38,8 +38,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Check
-      run: echo ${{ needs.prepare.outputs.workflow_sha }}
-      
+      run: echo "${{ needs.prepare.outputs.workflow_sha }}"
+
     - uses: actions/checkout@v3
       with:
         ref: ${{ needs.prepare.outputs.workflow_sha }}
