--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,7 +10,8 @@ on:
 
 env:
   AWS_REGION: us-east-1 
-  ECR_REPOSITORY: testrepo 
+  ECR_REPOSITORY: testrepo
+  SHA: ${{ github.event.inputs.commit_sha }}
 
 jobs:
   prepare:
@@ -18,6 +19,8 @@ jobs:
     outputs:
       workflow_sha: ${{ steps.step1.outputs.workflow_sha }}
     steps:
+      - name: get sha
+        run: echo $SHA
       - name: Set the SHA to checkout to
         id: step1
         run: |
